# Dockernaut

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  compose.yaml  pyproject.toml  targets.example.toml
.agents/skills/dockernaut/: SKILL.md
.agents/skills/wayweaver/: SKILL.md
agent/: pyproject.toml  targets.example.toml
agent/src/dockernaut/: cli.py  config.py  controller.py  errors.py  image.py  mcp_server.py  motion.py  router.py  sequence.py  types.py  vision.py
agent/src/dockernaut/adapters/: __init__.py  adb.py  base.py  cdp.py  rdp.py  ssh.py  vnc.py  x11.py
agent/tests/: test_core.py
docker/: Dockerfile  agent-clear  agent-click  agent-observe  agent-run  agent-screenshot  chrome  desktop-env.sh  desktop-ocr  entrypoint  start-chrome  start-desktop  supervisord.conf
docker/guest-tools/: agent-clear-screenshots  agent-key  agent-mouse  agent-type  desktop-screenshot
src/wayweaver/: __init__.py  cli.py  config.py  contracts.py  controller.py  errors.py  image.py  mcp_server.py  motion.py  operations.py  provenance.py  router.py  sequence.py  types.py  vision.py
src/wayweaver/adapters/: __init__.py  adb.py  android_ui.py  atspi.py  base.py  cdp.py  local.py  rdp.py  ssh.py  uia.py  vnc.py  wayland.py  wayland_backends.py  x11.py
src/wayweaver/runtime/: __init__.py  deploy.py
src/wayweaver/runtime/assets/linux/: wayweaver-applications  wayweaver-atspi  wayweaver-clipboard  wayweaver-x11-record
src/wayweaver/runtime/assets/windows/: uia.ps1
tests/: test_core.py  test_platform_semantics.py  test_runtime.py  test_unified.py
(+2 files in other folders)
